--- a/css/styles.css
+++ b/css/styles.css
@@ -91,14 +91,42 @@ gap: 40px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--title-color);
+    position: relative;
 }
 
 .header-link:hover {
     color: #404BBF;
+    transition-duration: 250ms;
+    transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 .header-link:focus {
     color: #404BBF;
 }
+
+.header-link:hover::after {
+    content: "";
+    width: 100%;
+    height: 4px;
+    background-color: #404BBF;
+    border-radius: 2px;
+    position: absolute;
+    left: 0;
+    top: 44px;
+    
+}
+
+.header-link:focus::after {
+    content: "";
+    width: 100%;
+    height: 4px;
+    background-color: #404BBF;
+    border-radius: 2px;
+    position: absolute;
+    left: 0;
+    top: 44px;
+}
+
 
 .header-list-contacts {
     display: flex;
@@ -123,9 +151,13 @@ gap: 40px;
 }
 .header-contact:hover {
     color: #404BBF;
+    transition-duration: 250ms;
+    transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-contact:focus {
     color: #404BBF;
+    transition-duration: 250ms;
+    transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .solutions {
@@ -177,11 +209,14 @@ gap: 40px;
 
 .solutions-btn:hover{
     background-color: #404BBF;
+    transition-duration: 250ms;
+    transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .solutions-btn:focus{
     background-color: #404BBF;
+    transition-duration: 250ms;
+    transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 
 .principles {
     background-color: #ffffff;
@@ -335,10 +370,14 @@ gap: 40px;
 
 .team-soc-link:hover {
     background-color: #31D0AA;
+    transition-duration: 250ms;
+    transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-soc-link:focus {
     background-color: #31D0AA;
+    transition-duration: 250ms;
+    transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-soc-icon {
@@ -393,6 +432,8 @@ gap: 40px;
     border: 1px solid #404BBF;
     border-radius: 4px;
     color: #404BBF;
+    transition-duration: 250ms;
+    transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-icon {
@@ -478,10 +519,14 @@ gap: 16px;
 
 .footer-soc-link:hover {
     background-color: #31D0AA;
+    transition-duration: 250ms;
+    transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-soc-link:focus {
     background-color: #31D0AA;
+    transition-duration: 250ms;
+    transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-soc-icon {
@@ -532,6 +577,8 @@ gap: 16px;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
     0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
+    transition-duration: 250ms;
+    transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-btn:focus{
     color: #FFFFFF;
@@ -539,7 +586,8 @@ gap: 16px;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
     0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-    
+    transition-duration: 250ms;
+    transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
 }  
 
 .list {
@@ -570,6 +618,8 @@ img {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
+    transition-duration: 250ms;
+    transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item-photo:nth-child(3n) {
