--- a/css/styles.css
+++ b/css/styles.css
@@ -91,7 +91,6 @@ gap: 40px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--title-color);
-    position: relative;
 }
 
 .header-link:hover {
@@ -104,19 +103,12 @@ gap: 40px;
     color: #404BBF;
 }
 
-.header-link:hover::after {
-    content: "";
-    width: 100%;
-    height: 4px;
-    background-color: #404BBF;
-    border-radius: 2px;
-    position: absolute;
-    left: 0;
-    top: 44px;
-    
+.active {
+    position: relative;
 }
 
-.header-link:focus::after {
+
+.active::after {
     content: "";
     width: 100%;
     height: 4px;
@@ -614,6 +606,38 @@ img {
     margin-bottom: 48px;
 }
 
+.portfolio-link {
+
+}
+
+.portfolio-item-photo:hover .portfolio-cover-text {
+    transform: translate(0);
+}
+
+.portfolio-item-photo:focus .portfolio-cover-text {
+    transform: translate(0);
+}
+
+
+.portfolio-cover-wrap {
+    position: relative;
+    overflow: hidden;
+}
+
+.portfolio-cover-text {
+    position: absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #F4F4FD;
+    background-color: #4D5AE5;
+    padding: 40px 32px;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .portfolio-item-photo:hover {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16),
@@ -630,11 +654,14 @@ img {
     margin-bottom: 0;
 }
 
+
 .card-container {
     border-right: 1px solid #E7E9FC;
     border-left: 1px solid #E7E9FC;
     border-bottom: 1px solid #E7E9FC;
+    
 }
+
 
 
 .portfolio-subtitle {
@@ -651,4 +678,68 @@ img {
     letter-spacing: 0.02em;
     color: var(--text-color);
     margin-top: 8px;
+}
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(23, 26, 36, 0.432);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal {
+    width: 408px;
+    min-height: 576px;
+    background-color: #FCFCFC;
+    border-radius: 4px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 20px;
+}
+
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) scaleX(0);
+
+}
+
+.modal-close {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    display: block;
+    margin-left: auto;
+    width: 24px;
+    height: 24px;
+    color: #2E2F42;
+    background-color: #E7E9FC;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+}
+
+.modal-close-icon {
+    fill: currentColor;
+}
+
+.modal-close:hover {
+    background-color: #86a19c;
+    transition-duration: 250ms;
+    transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close:focus {
+    background-color: #86a19c;
+    transition-duration: 250ms;
+    transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
 }
