--- a/css/styles.css
+++ b/css/styles.css
@@ -91,16 +91,17 @@ gap: 40px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--title-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-link:hover {
     color: #404BBF;
-    transition-duration: 250ms;
-    transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
+
     
 }
 .header-link:focus {
     color: #404BBF;
+
 }
 
 .active {
@@ -140,16 +141,15 @@ gap: 40px;
     color: var(--text-color);
     font-style: normal;
     margin-left: 40px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-contact:hover {
     color: #404BBF;
-    transition-duration: 250ms;
-    transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 .header-contact:focus {
     color: #404BBF;
-    transition-duration: 250ms;
-    transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .solutions {
@@ -197,17 +197,16 @@ gap: 40px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     display: block;
     margin: 0 auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .solutions-btn:hover{
     background-color: #404BBF;
-    transition-duration: 250ms;
-    transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 .solutions-btn:focus{
     background-color: #404BBF;
-    transition-duration: 250ms;
-    transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .principles {
@@ -358,18 +357,16 @@ gap: 40px;
     align-items: center;
     justify-content: center;
     color: #F4F4FD;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-soc-link:hover {
-    background-color: #31D0AA;
-    transition-duration: 250ms;
-    transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: #404BBF;
 }
 
 .team-soc-link:focus {
-    background-color: #31D0AA;
-    transition-duration: 250ms;
-    transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: #404BBF;
+    
 }
 
 .team-soc-icon {
@@ -418,15 +415,15 @@ gap: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-link:hover {
     border: 1px solid #404BBF;
     border-radius: 4px;
     color: #404BBF;
-    transition-duration: 250ms;
-    transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 
 .customers-icon {
     fill: currentColor;
@@ -507,18 +504,17 @@ gap: 16px;
     align-items: center;
     justify-content: center;
     color: #F4F4FD;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-soc-link:hover {
     background-color: #31D0AA;
-    transition-duration: 250ms;
-    transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 
 .footer-soc-link:focus {
     background-color: #31D0AA;
-    transition-duration: 250ms;
-    transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 
 .footer-soc-icon {
@@ -561,6 +557,7 @@ gap: 16px;
     border: 1px solid #E7E9FC;
     border-radius: 4px;
     padding: 12px 24px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-btn:hover{
@@ -569,8 +566,7 @@ gap: 16px;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
     0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-    transition-duration: 250ms;
-    transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 .portfolio-btn:focus{
     color: #FFFFFF;
@@ -578,8 +574,7 @@ gap: 16px;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
     0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-    transition-duration: 250ms;
-    transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
+
 }  
 
 .list {
@@ -604,6 +599,7 @@ img {
     flex-basis: calc(100% / 3 - 24px);
     margin-right: 24px;
     margin-bottom: 48px;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-link {
@@ -642,8 +638,7 @@ img {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
-    transition-duration: 250ms;
-    transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .portfolio-item-photo:nth-child(3n) {
@@ -720,22 +715,22 @@ img {
     border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, 0.1);
     cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-icon {
     fill: currentColor;
+
 }
 
 .modal-close:hover {
-    background-color: #86a19c;
-    transition-duration: 250ms;
-    transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: #404BBF;
+    color:#ffffff
 }
 
 .modal-close:focus {
-    background-color: #86a19c;
-    transition-duration: 250ms;
-    transition-delay: cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: #404BBF;
+    color:#ffffff
 }
 
 .is-hidden {
